--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <header class="header-container">
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="#">OurProgrammer</a>
+                    <a class="navbar-brand" href="/index.html">OurProgrammer</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -50,8 +50,8 @@
                         </ul>
                         <ul class="navbar-nav mb-2 mb-lg-0">
                             <li class="nav-item d-flex">
-                                <a class="nav-link ms-2 me-2" href="#"><i class="fas fa-user"></i></a>
-                                <a class="nav-link ms-2 me-2" href="#"><i class="fas fa-user-plus"></i></a>
+                                <a class="nav-link ms-2 me-2" href="/login.html"><i class="fas fa-user"></i></a>
+                                <a class="nav-link ms-2 me-2" href="/join.html"><i class="fas fa-user-plus"></i></a>
                             </li>
                         </ul>
                     </div>
