--- a/join.html
+++ b/join.html
@@ -5,11 +5,59 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-signin-client_id" content="871632657613-op0fd1vj9qk05o1iqlemfekj6lhgk3am.apps.googleusercontent.com">
     <title>회원가입</title>
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
 <body>
+    <div class="container">
+        <header class="d-flex mt-5 ms-auto me-auto">
+            <a class="navbar-brand ms-auto me-auto" href="/index.html"><h1>OurProgrammer</h1></a>
+        </header>
+        <main class="mt-5">
+            <div class="card border-gray mb-3 ms-auto me-auto" style="max-width: 30rem;">
+                <div class="card-header bg-transparent border-gray d-flex justify-content-center">
+                    <div>회원가입</div>
+                </div>
 
+                <div class="card-body p-5 text-dark">
+                    <div class="form-floating mb-3">
+                        <input type="email" class="form-control" id="floatingEmail" placeholder="name@example.com">
+                        <label for="floatingEmail">이메일 주소</label>
+                        <div class="valid-feedback">
+                            사용 가능한 이메일 주소입니다.
+                        </div>
+                        <div class="invalid-feedback">
+                            사용 불가능한 이메일 주소입니다.
+                        </div>
+                    </div>
+                    <div class="form-floating mb-3">
+                        <input type="password" class="form-control" id="floatingPassword" placeholder="Password" onblur="chekPassword()">
+                        <label for="floatingPassword">비밀번호</label>
+                    </div>
+                    <div class="form-floating mb-3">
+                        <input type="password" class="form-control" id="floatingRePassword" placeholder="Password">
+                        <label for="floatingRePassword">비밀번호 확인</label>
+                    </div>
+                    <div class="form-floating mb-3">
+                        <input type="text" class="form-control" id="floatingName" placeholder="Name">
+                        <label for="floatingName">이름</label>
+                    </div>
+                    <div class="form-floating mb-3">
+                        <input type="tel" class="form-control" id="floatingPhone" placeholder="Phone">
+                        <label for="floatingPhone">연락처</label>
+                    </div>
+                    <button class="btn btn-primary pt-3 pb-3 mb-3 w-100 text" type="button">로그인</button>
+                </div>
+                <div class="card-footer bg-transparent border-gray d-flex justify-content-center">
+                    <a href="" class="nav-link">비밀번호 찾기</a> <a href="" class="nav-link">회원가입</a>
+                </div>
+            </div>
+        </main>
+    </div>
+    <script src="/js/join_logic.js"></script>
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
 </body>
 
 </html>
